# test-notify-rust

./: Cargo.toml
src/: config.rs  item.rs  lib.rs  main.rs
